fix littleproxy-cli tests which are standing on littleproxy-core module test code.

--- a/littleproxy-cli/pom.xml
+++ b/littleproxy-cli/pom.xml
@@ -21,6 +21,13 @@
             <artifactId>littleproxy-core</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.littleproxy</groupId>
+            <artifactId>littleproxy-core</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
 
         <!-- CLI specific dependencies -->
         <dependency>
